--- a/src/SwashbucklerDiary.Gtk/SwashbucklerDiary.Gtk.csproj
+++ b/src/SwashbucklerDiary.Gtk/SwashbucklerDiary.Gtk.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<OutputType>Exe</OutputType>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
@@ -9,13 +9,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="GtkSharp" Version="3.24.24.117-develop" />
-		<PackageReference Include="GtkSourceSharp" Version="3.24.24.117-develop" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebView" Version="8.0.12" />
-		<PackageReference Include="Tmds.DBus.Protocol" Version="0.21.2" />
-		<PackageReference Include="WebkitGtkSharp" Version="3.24.24.117-develop" />
+		<PackageReference Include="GirCore.Adw-1" Version="0.6.0-preview.1" />
+		<PackageReference Include="GirCore.Gtk-4.0" Version="0.6.0-preview.1" />
+		<PackageReference Include="GirCore.WebKit-6.0" Version="0.6.0-preview.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebView" Version="9.0.*" />
 		<PackageReference Include="Serilog.Sinks.SQLite.Maui" Version="1.9.7" />
-		<PackageReference Include="WebDav.Client" Version="2.8.0" />
 	</ItemGroup>
 
 	<ItemGroup>
