--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -2,6 +2,15 @@ name: releases
 
 on:
   workflow_dispatch:
+    inputs:
+      prerelease:
+        description: 'Pre-Release'
+        required: false
+        type: boolean
+      releasebody:
+        description: 'Release body'
+        required: true
+        type: string
 
 env:
   DOTNET_NOLOGO: true                     # Disable the .NET logo
@@ -87,7 +96,8 @@ jobs:
           file_glob: true
           release_name: ${{ env.APPLICATION_DISPLAY_VERSION }}
           tag: v${{ env.APPLICATION_DISPLAY_VERSION }}
-          prerelease: true
+          prerelease: ${{ inputs.prerelease }}
+          body: ${{ inputs.releasebody }}
 
       # Replace the version in Package.appxmanifest
       - name: Update version in Package.appxmanifest
@@ -186,7 +196,8 @@ jobs:
           file_glob: true
           release_name: ${{ env.APPLICATION_DISPLAY_VERSION }}
           tag: v${{ env.APPLICATION_DISPLAY_VERSION }}
-          prerelease: true
+          prerelease: ${{ inputs.prerelease }}
+          body: ${{ inputs.releasebody }}
 
       - name: Update maccatalyst-x64 to Github Releases
         uses: svenstaro/upload-release-action@v2
@@ -196,7 +207,7 @@ jobs:
           file_glob: true
           release_name: ${{ env.APPLICATION_DISPLAY_VERSION }}
           tag: v${{ env.APPLICATION_DISPLAY_VERSION }}
-          prerelease: true
+          prerelease: ${{ inputs.prerelease }}
 
       - name: Update ios-arm64 to Github Releases
         uses: svenstaro/upload-release-action@v2
@@ -206,4 +217,4 @@ jobs:
           file_glob: true
           release_name: ${{ env.APPLICATION_DISPLAY_VERSION }}
           tag: v${{ env.APPLICATION_DISPLAY_VERSION }}
-          prerelease: true
+          prerelease: ${{ inputs.prerelease }}
