--- a/src/SwashbucklerDiary.Gtk/SwashbucklerDiary.Gtk.csproj
+++ b/src/SwashbucklerDiary.Gtk/SwashbucklerDiary.Gtk.csproj
@@ -42,8 +42,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="GirCore.Gtk-4.0" Version="0.6.0-preview.1" />
-		<PackageReference Include="GirCore.WebKit-6.0" Version="0.6.0-preview.1" />
+		<PackageReference Include="GirCore.Gtk-4.0" Version="0.6.3" />
+		<PackageReference Include="GirCore.WebKit-6.0" Version="0.6.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebView" Version="9.0.*" />
 		<PackageReference Include="Serilog.Sinks.SQLite.Maui" Version="1.9.7" />
 	</ItemGroup>
