--- a/src/SwashbucklerDiary.Gtk/SwashbucklerDiary.Gtk.csproj
+++ b/src/SwashbucklerDiary.Gtk/SwashbucklerDiary.Gtk.csproj
@@ -7,6 +7,7 @@
 		<Nullable>enable</Nullable>
 		<DefineConstants>$(DefineConstants);GTK;WEBKIT_GTK</DefineConstants>
 		<ApplicationId>com.yucore.swashbucklerdiary</ApplicationId>
+		<CompressionEnabled>false</CompressionEnabled>
 		<Version>1.0.0</Version>
 
 		<!-- https://github.com/qmfrederik/dotnet-packaging -->
