🆕 feat: add Quick record

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
@@ -320,6 +320,13 @@
     "HidePlatforms": [ { "Platform": "Browser" } ]
   },
   {
+    "Name": "Quick record",
+    "Icon": "flash_on",
+    "Path": "Setting / Quick record",
+    "Href": "setting",
+    "HidePlatforms": [ { "Platform": "Browser" } ]
+  },
+  {
     "Name": "View source",
     "Icon": "auto_stories",
     "Path": "About / View source",
