--- a/.github/workflows/upload-msstore-msix-to-release.yml
+++ b/.github/workflows/upload-msstore-msix-to-release.yml
@@ -1,10 +1,15 @@
-name: Upload MSStore MSIX to release
+﻿name: Upload MSStore MSIX to release
 
 permissions:
   contents: write
 
 on:
   workflow_dispatch: 
+    inputs:
+      version:
+        description: 'Version'
+        required: true
+        type: string
 
 env:
     APP_NAME: 'SwashbucklerDiary'
@@ -15,25 +20,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the code
-    - uses: actions/checkout@v4
-      with:
-         fetch-depth: 0
-
-    # Get the commit count and format the version
-    - name: Get commit count and format version
-      id: version
-      run: |
-        commit_count=$(git rev-list --count HEAD)
-        major=$((commit_count / 1000))
-        minor=$((commit_count % 1000 / 10))
-        patch=$((commit_count % 10))
-        formatted_version="$major.$minor.$patch"
-        echo "APPLICATION_DISPLAY_VERSION=$formatted_version" >> $GITHUB_ENV
-
     - name: Upload MSStore MSIX to release
       uses: JasonWei512/Upload-Microsoft-Store-MSIX-Package-to-GitHub-Release@v1
       with:
         store-id: ${{ env.STORE_ID }}
         token: ${{ secrets.GITHUB_TOKEN }}
-        asset-name-pattern: ${{ env.APP_NAME }}-${{ env.APPLICATION_DISPLAY_VERSION }}-windows-x64
+        asset-name-pattern: ${{ env.APP_NAME }}-${{ inputs.version }}-windows-x64
