--- a/src/SwashbucklerDiary.Maui/Platforms/MacCatalyst/Entitlements.plist
+++ b/src/SwashbucklerDiary.Maui/Platforms/MacCatalyst/Entitlements.plist
@@ -9,6 +9,8 @@
 		<!-- When App Sandbox is enabled, this value is required to open outgoing network connections. -->
 		<key>com.apple.security.network.client</key>
 		<true/>
+		<key>com.apple.security.network.server</key>
+		<true/>
 		<key>com.apple.security.assets.movies.read-only</key>
 		<true/>
 		<key>com.apple.security.assets.music.read-only</key>
