--- a/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
+++ b/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
@@ -148,7 +148,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\SwashbucklerDiary.Rcl.Client\SwashbucklerDiary.Rcl.Client.csproj" />
+		<ProjectReference Include="..\SwashbucklerDiary.Rcl.Hybird\SwashbucklerDiary.Rcl.Hybird.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
