🆕 feat: add diary insert time format setting

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
@@ -185,6 +185,12 @@
     "Href": "diarySetting"
   },
   {
+    "Name": "Insert Time format",
+    "Icon": "schedule",
+    "Path": "Setting / Diary / Insert Time format",
+    "Href": "diarySetting"
+  },
+  {
     "Name": "Outline",
     "Icon": "format_list_bulleted",
     "Path": "Setting / Diary / Outline",
