--- a/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
+++ b/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
@@ -153,6 +153,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="12.1.0" />
+		<PackageReference Include="Plugin.Maui.Biometric" Version="0.0.7" />
 		<PackageReference Include="Serilog.Sinks.SQLite.Maui" Version="2.0.0" />
 		<PackageReference Include="Yu-Core.MauiBlazorToolkit" Version="1.4.6" />
 	</ItemGroup>
