--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/open-source-project/open-source-project.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/open-source-project/open-source-project.json
@@ -82,12 +82,17 @@
   {
     "Name": "Microsoft.Data.Sqlite",
     "License": "MIT license",
-    "Url": "https://github.com/dotnet/efcore/blob/release/8.0/LICENSE.txt"
+    "Url": "https://github.com/dotnet/efcore/blob/main/LICENSE.txt"
   },
   {
     "Name": "panzoom",
     "License": "MIT license",
     "Url": "https://github.com/anvaka/panzoom/blob/main/LICENSE"
+  },
+  {
+    "Name": "Plugin.Maui.Biometric",
+    "License": "MIT license",
+    "Url": "https://github.com/FreakyAli/Plugin.Maui.Biometric/blob/master/LICENSE"
   },
   {
     "Name": "Serilog",
