--- a/src/SwashbucklerDiary.Rcl.Hybird/SwashbucklerDiary.Rcl.Hybird.csproj
+++ b/src/SwashbucklerDiary.Rcl.Hybird/SwashbucklerDiary.Rcl.Hybird.csproj
@@ -12,6 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="EmbedIO" Version="3.5.2" />
 		<PackageReference Include="WebDav.Client" Version="2.8.0" />
 	</ItemGroup>
 
