--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
@@ -240,6 +240,12 @@
     "Href": "diarySetting"
   },
   {
+    "Name": "Keep the original file name",
+    "Icon": "raw_on",
+    "Path": "Setting / Diary / Keep the original file name",
+    "Href": "diarySetting"
+  },
+  {
     "Name": "Template",
     "Icon": "space_dashboard",
     "Path": "Setting / Template",
