--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -164,7 +164,7 @@ jobs:
       # Update Xcode
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-           xcode-version: latest
+           xcode-version: latest-stable
 
       # Install .NET SDK
       - name: Setup .NET SDK
